<resources>
    <string name="app_name">Gainr</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!--Onboarding Strings-->
    <string name="onboarding_email_text">What\'s your email address?</string>
    <string name="onboarding_email_hint">Email</string>
    <string name="onboarding_name_text">What\'s your name?</string>
    <string name="onboarding_password_text">Create your account password</string>
    <string name="onboarding_last_name_hint">Last</string>
    <string name="onboarding_first_name_hint">First</string>
    <string name="onboarding_date_picker_title">Wat\'s your birthdate</string>
    <string name="onboarding_birthdate_text">What\'s your birthdate?</string>
    <string name="onboarding_password_hint">Password</string>
    <string name="validate_email_error_message">Not a valid email address!</string>
    <string name="validate_name_error_message">Can\'t be empty!</string>
    <string name="validate_password_error_message">6 to 20 characters  with at least one digit, one upper case letter, one lower case letter and one special symbol</string>
    <string name="onboarding_continue">Continue </string>
    <string name="onboarding_completed_title">Registration completed!</string>

    <!--Forgot Password Strings-->
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_info">Enter your email below to receive your password reset instructions.</string>
    <string name="forgot_password_underlined"><u>forgot password</u></string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>

    <!--Start Up Strings-->
    <string name="get_started">Get started</string>
    <string name="or">or</string>

    <!--Login Strings-->
    <string name="login_underlined"><u>login</u></string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!--Menu String-->
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="workouts">Workouts</string>
    <string name="schedules">Schedules</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Other Strings-->
    <string name="exercise_instruction_mock">1. Lie back on a sturdy bench and grasp a bar with an overhand grip (slightly wider than shoulder width). Feet should be flat on the floor and back arched.\n\n2. Dismount the bar from the rack and lower the weight until it touches your middle chest.\n\n3. Press the bar upward until arms are fully extended (focus on using the chest muscles throughout the movement).\n\n4. Slowly lower bar back down to chest and repeat for desired repetitions.</string>
    <string name="bench_description_hint">The bench press is a fundamental movement for developing upper body strength and an attention grabbing physique. It not only trains your chest, but gives the front shoulders, triceps and back a solid workout too.</string>
    <string name="description">Description</string>
    <string name="instruction">Instruction</string>
    <string name="reps">Reps</string>
    <string name="kilos">Kilos</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="empty_text_no_exercises">There are currently no exercises.</string>
    <string name="my_schedules">My Schedules</string>
    <string name="minus_seperator">-</string>
    <string name="exercises">Exercises</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="choose_workout">Choose workout</string>
    <string name="schedule_name">Schedule name</string>
    <string name="length_in_weeks">Length in weeks (ex. 16)</string>
    <string name="weekly_trainings">Training moments per Week (ex. 3)</string>
    <string name="schedule_description">Schedule description</string>
    <string name="workout_name">Workout name</string>

    <string name="chat">Chat</string>
    <string name="buddies">Buddies</string>
    <string name="title_add_workout">Add Workout</string>
    <string name="title_workout_details">Workout Details</string>
    <string name="title_exercise_details">Exercise Details</string>
    <string name="title_schedule_details">Schedule Details</string>
    <string name="title_placeholder">Title</string>
    <string name="category_placeholder">Category</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_search">Search</string>
</resources>
