<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/program">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_schedules_black"
            android:title="@string/schedules" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/ic_workout_black"
            android:title="@string/workouts" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_exercises_black"
            android:title="@string/exercises" />
    </group>

    <group
        android:id="@+id/social"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_buddies"
            android:icon="@drawable/ic_buddies"
            android:title="@string/buddies" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:menuCategory="system"
            android:title="@string/settings" />

    </group>
</menu>
