<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Account">

        <SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_title_social_recommendations" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>
</PreferenceScreen>
