<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/workoutDetailsInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="Workout Details"
                android:textAllCaps="true"
                android:textColor="#3C3B3A"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addWorkoutNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="Name"
                android:maxLines="1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/addWorkoutDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/description"
                android:maxLines="4"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/exercises"
                android:textAllCaps="true"
                android:textColor="#3C3B3A"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/addExerciseListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Button
            android:id="@+id/addExerciseButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/add_exercise"
            android:layout_marginTop="16dp"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
