<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="376dp"
        android:layout_height="500dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.503"
        tools:layout_editor_absoluteX="-73dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="@string/schedule_name"
                    android:inputType="text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="16dp" />

                <EditText
                    android:id="@+id/lengthInWeeksEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="@string/length_in_weeks"
                    android:inputType="number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />

                <EditText
                    android:id="@+id/weeklyTrainingsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="@string/weekly_trainings"
                    android:inputType="number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText3" />

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/schedule_description"
                    android:inputType="text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weeklyTrainingsEditText" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/exerciseList"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_constraintRight_creator="1"
                    tools:layout_constraintLeft_creator="1">
                </android.support.v7.widget.RecyclerView>

                <Button
                    android:id="@+id/addWorkoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/rect_rounded_corners_solid"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="sans-serif-light"
                    android:text="Add Workout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>